#
# Makefile.am -- Makefile for the include files
#
# (c) 2012 Prof Dr Andreas Mueller, Hochschule Rapperswil
# $Id$
#
include_HEADERS = AstroDebug.h AstroFormat.h AstroImage.h AstroCamera.h \
	AstroLoader.h AstroDisplay.h AstroEvent.h AstroImager.h \
	AstroIO.h AstroPixel.h AstroUSB.h AstroUVC.h AstroUnicap.h \
	AstroUtils.h AstroMosaic.h AstroDemosaic.h AstroAdapter.h \
	AstroFilter.h AstroFilterfunc.h AstroCalibration.h \
	AstroOperations.h AstroTransform.h AstroFWHM.h \
	AstroMask.h AstroGuiding.h AstroTypes.h AstroCallback.h \
	AstroCoordinates.h AstroDevice.h AstroLocator.h AstroExceptions.h \
	AstroFocus.h AstroViewer.h AstroTonemapping.h \
	AstroPersistence.h AstroTask.h AstroInterpolation.h \
	AstroCatalog.h AstroChart.h AstroProjection.h AstroProcess.h \
	AstroConfig.h AstroDiscovery.h AstroConvolve.h AstroProject.h \
	AstroImageops.h

noinst_HEADERS = PixelValue.h Sun.h \
	BasicProcess.h CalibrationProcess.h GuiderProcess.h \
	ViewerPipeline.h Radon.h \
	ImageDirectory.h TaskTable.h TrackingWork.h DrivingWork.h \
	CancellableWork.h ExposureWork.h \
	TrackingPersistence.h CalibrationPersistence.h \
	TrackingStore.h CalibrationStore.h ImagePersistence.h \
	FocusWork.h FocusCompute.h Serial.h \
	BasicGuiderport.h \
	FieldPersistence.h astroregex.h \
	Nice.h Blurr.h DeviceNameUSB.h

