#
# Makefile.am -- Makefile for the include files
#
# (c) 2012 Prof Dr Andreas Mueller, Hochschule Rapperswil
#
include_HEADERS =							\
	AstroAdapter.h							\
	AstroCalibration.h						\
	AstroCallback.h							\
	AstroCamera.h							\
	AstroCatalog.h							\
	AstroChart.h							\
	AstroConfig.h							\
	AstroConvolve.h							\
	AstroCoordinates.h						\
	AstroDebug.h							\
	AstroDemosaic.h							\
	AstroDemosaicAdapter.h						\
	AstroDevice.h							\
	AstroDiscovery.h						\
	AstroDisplay.h							\
	AstroEvent.h							\
	AstroExceptions.h						\
	AstroFWHM.h							\
	AstroFilter.h							\
	AstroFilterfunc.h						\
	AstroFocus.h							\
	AstroFormat.h							\
	AstroGateway.h							\
	AstroGuiding.h							\
	AstroHorizon.h							\
	AstroIO.h							\
	AstroImage.h							\
	AstroImageops.h							\
	AstroImager.h							\
	AstroInterpolation.h						\
	AstroLoader.h							\
	AstroLocator.h							\
	AstroMask.h							\
	AstroMosaic.h							\
	AstroOperations.h						\
	AstroPersistence.h						\
	AstroPixel.h							\
	AstroPostprocessing.h						\
	AstroProcess.h							\
	AstroProject.h							\
	AstroProjection.h						\
	AstroPsf.h							\
	AstroSolarsystem.h						\
	AstroTask.h							\
	AstroTonemapping.h						\
	AstroTransform.h						\
	AstroTypes.h							\
	AstroUSB.h							\
	AstroUVC.h							\
	AstroUnicap.h							\
	AstroUtils.h							\
	AstroViewer.h

noinst_HEADERS =							\
	Backlash.h							\
	BasicGuideport.h						\
	Blurr.h								\
	CancellableWork.h						\
	DeviceNameUSB.h							\
	DrivingWork.h							\
	ExposureWork.h							\
	FieldPersistence.h						\
	FocusCompute.h							\
	FocusWork.h							\
	hidapi.h							\
	ImageDirectory.h						\
	ImagePersistence.h						\
	Nice.h								\
	PixelValue.h							\
	Radon.h								\
	Serial.h							\
	Sun.h								\
	TaskTable.h							\
	ViewerPipeline.h

